--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^18.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-flexr": "^3.0.0-beta.2",
     "react-scripts": "5.0.1",
     "rsuite": "^5.22.1",
     "typescript": "^4.8.4",
@@ -45,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-flexr": "^2.0.12",
     "electron": "^21.2.3"
   }
 }
