--- a/package.json
+++ b/package.json
@@ -11,13 +11,20 @@
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
     "apexcharts": "^3.36.3",
+    "browser-serialport": "^2.1.0",
+    "express": "^4.18.2",
+    "os-browserify": "^0.3.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-flexr": "^3.0.0-beta.2",
     "react-scripts": "5.0.1",
     "rsuite": "^5.22.1",
+    "serialport": "^10.4.0",
+    "socket.io": "^4.5.3",
+    "socket.io-client": "^4.5.3",
     "typescript": "^4.8.4",
+    "util": "^0.12.5",
     "web-vitals": "^2.1.4"
   },
   "main": "src/electron-starter.js",
