--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "serialport": "^10.4.0",
     "socket.io": "^4.5.3",
     "socket.io-client": "^4.5.3",
-    "typescript": "^4.8.4",
     "util": "^0.12.5",
     "web-vitals": "^2.1.4"
   },
@@ -39,7 +38,8 @@
     "react-eject": "react-scripts eject",
     "electron-build": "electron-builder",
     "build": "npm run react-build && npm run electron-build",
-    "start": "concurrently \"cross-env BROWSER=none npm run react-start\" \"wait-on http://localhost:3000 && electron .\""
+    "build-ts": "tsc src/main.ts",
+    "start": "npm run build-ts && concurrently \"cross-env BROWSER=none npm run react-start\" \"wait-on http://localhost:3000 && electron .\""
   },
   "eslintConfig": {
     "extends": [
@@ -60,10 +60,12 @@
     ]
   },
   "devDependencies": {
+    "@types/electron": "^1.6.10",
     "@types/react-flexr": "^2.0.12",
     "concurrently": "^7.5.0",
     "electron": "^21.2.3",
     "electron-builder": "^23.6.0",
+    "typescript": "^4.9.3",
     "wait-on": "^6.0.1"
   }
 }
