--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.3",
-    "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
     "apexcharts": "^3.36.3",
     "browser-serialport": "^2.1.0",
+    "chart.js": "^4.0.1",
+    "chartjs-adapter-moment": "^1.0.1",
+    "chartjs-plugin-streaming": "^2.0.0",
     "cross-env": "^7.0.3",
     "electron-is-dev": "^2.0.0",
     "electron-squirrel-startup": "^1.0.0",
@@ -24,6 +26,7 @@
     "os-browserify": "^0.3.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
+    "react-chartjs-2": "^5.0.1",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
     "react-flexr": "^3.0.0-beta.2",
@@ -76,6 +79,7 @@
     "@electron-forge/maker-zip": "^6.0.4",
     "@types/electron": "^1.6.10",
     "@types/file-saver": "^2.0.5",
+    "@types/react": "^18.0.26",
     "@types/react-flexr": "^2.0.12",
     "concurrently": "^7.5.0",
     "electron": "^21.2.3",
