--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "browser-serialport": "^2.1.0",
     "chart.js": "^4.0.1",
     "chartjs-adapter-moment": "^1.0.1",
+    "chartjs-plugin-annotation": "^2.1.0",
     "chartjs-plugin-streaming": "^2.0.0",
     "cross-env": "^7.0.3",
     "electron-is-dev": "^2.0.0",
