--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
     "react-flexr": "^3.0.0-beta.2",
+    "react-icons": "^4.7.1",
     "react-scripts": "5.0.1",
     "rsuite": "^5.22.1",
     "serialport": "^10.4.0",
